[workspace]
resolver = "2"
members = ["core", "gtk", "gui", "usb", "mod-pod2", "mod-pocket", "mod-xt", "mod-bassxt"]

[workspace.package]
version = "0.0.0"
authors = ["Artem Egorkine <arteme@gmail.com>"]
edition = "2021"
rust-version = "1.65"

[profile.release]
codegen-units = 1
debug = true
lto = "thin"
