[package]
name = "pod-core"
version = "0.5.0"
authors = ["Artem Egorkine <arteme@gmail.com>"]
edition = "2021"

[dependencies]
bitflags = "1.3.2"
midir = "0.8.0"
serde = { version = "1.0.110", features = ["derive"] }
log = "0.4.8"
anyhow = "1.0.31"
arrayref = "0.3.6"
tokio = { version = "1.15.0", features = ["sync", "macros", "rt", "rt-multi-thread", "time"] }
async-stream = "0.3.2"
regex = "1.6.0"
strfmt = "0.1.6"
futures = "0.3.19"
futures-util = "0.3.19"
result = "1.0.0"
unicycle = { version = "0.8.0", features = ['futures-rs'] }
