[package]
name = "pod-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bitflags = "1.3.2"
once_cell = "1.14.0"
midir = "0.9.0"
log = "0.4.8"
anyhow = "1.0.31"
arrayref = "0.3.6"
tokio = { version = "1.15.0", features = ["sync", "macros", "rt", "rt-multi-thread", "time"] }
async-stream = "0.3.2"
regex = "1.6.0"
strfmt = "0.1.6"
futures = "0.3.19"
futures-util = "0.3.19"
result = "1.0.0"
unicycle = { version = "0.8.0", features = ['futures-rs'] }
