[package]
name = "pod-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1.81"
bitflags = "2.6.0"
once_cell = "1.14.0"
midir = "0.10.1"
log = "0.4.8"
anyhow = { version = "1.0", features = ["backtrace"]  }
arrayref = "0.3.6"
tokio = { version = "1.39.2", features = ["sync", "macros", "rt", "rt-multi-thread", "time"] }
async-stream = "0.3.5"
regex = "1.6.0"
strfmt = "0.1.6"
futures = "0.3.19"
futures-util = "0.3.19"
result = "1.0.0"
unicycle = { version = "0.10.1", features = ['futures-rs'] }

[target.'cfg(target_os = "macos")'.dependencies]
coremidi = "0.8.0" # fix coremidi to 0.8.0 because 0.8.1 is not published, fix unaligned pointer access
coremidi-sys = "3.1.1" # fix coremidi-sys to 3.1.1 because coremidi 0.8.1 is not published, fix unaligned pointer access
