[package]
name = "pod-gtk"
version = "0.5.0"
authors = ["Artem Egorkine <arteme@gmail.com>"]
edition = "2018"

[dependencies]
glib = "0.15.10"
gdk = "0.15.4"
gtk = { version = "0.15.5", features = ["v3_24"] }
multimap = "=0.8.3"

pin-project = "=0.4.29" # needed to get glib dep to comile :(

log = "*" # defined in pod-core
tokio = "*" # defined in pod-core
anyhow = "*" # defined in pod-code

pod-core = { path = "../core" }
