[package]
name = "pod-gtk"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
glib = "0.16"
gdk = "0.16"
gtk = { version = "0.16", features = ["v3_24"] }
multimap = "0.9.0"

log = "*" # defined in pod-core
tokio = "*" # defined in pod-core
anyhow = "*" # defined in pod-code

pod-core = { path = "../core" }
