[package]
name = "pod-gui"
version = "0.5.0"
authors = ["Artem Egorkine <arteme@gmail.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "=3.2.14", features = ["derive", "wrap_help"] }
simple_logger = "=1.6.0"
sentry = "0.27.0"
arc-swap = "1.5.0"
dyn-iter = "0.2.0"

once_cell = "*" # defined in mod-pod2
maplit = "*" # -"-
log = "*" # defined in pod-core
tokio = "*" # defined in pod-core
regex = "*" # defined in pod-core
anyhow = "*" # defined in pod-code
futures = "*" # defined in pod-code
futures-util = "*" # defined in pod-code
result = "*" # defined in pod-core
midir = "*" # defined in pod-core

pod-core = { path = "../core" }
pod-gtk = { path = "../gtk" }
pod-mod-pod2 = { path = "../mod-pod2" }
pod-mod-pocket = { path = "../mod-pocket" }

[build-dependencies]
git-version = "0.3.5"

[features]
"winrt" = [ "midir/winrt" ]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[[bin]]
name = "pod-gui"
