[package]
name = "pod-gui"
build = "build.rs"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "=3.2.14", features = ["derive", "wrap_help"] }
reqwest = "0.11.13"
semver = "1.0.14"
sentry = { version = "0.36.0" }
sentry-rust-minidump = { version = "0.10.0", features = ["ipc"] }
simple_logger = "=4.0.0"
string_template = "0.2.1"

bitflags = "*" # defined in pod-core
once_cell = "*" # defined in pod-core
maplit = "*" # defined in mod-pod2
log = "*" # defined in pod-core
tokio = "*" # defined in pod-core
regex = "*" # defined in pod-core
anyhow = "*" # defined in pod-code
futures = "*" # defined in pod-code
futures-util = "*" # defined in pod-code
result = "*" # defined in pod-core
midir = "*" # defined in pod-core

pod-core = { path = "../core" }
pod-gtk = { path = "../gtk" }
pod-mod-pod2 = { path = "../mod-pod2" }
pod-mod-pocket = { path = "../mod-pocket" }
pod-mod-xt = { path = "../mod-xt" }
pod-mod-bassxt = { path = "../mod-bassxt" }
pod-usb = { path = "../usb", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.2.7"

[build-dependencies]
git-version = "0.3.5"

[features]
default = [ "usb" ]
winrt = [ "midir/winrt", "pod-mod-pocket/winrt" ]
usb = [ "dep:pod-usb" ]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[[bin]]
name = "pod-gui"
