[package]
name = "pod-mod-pod2"
version = "0.3.0-dev"
authors = ["Artem Egorkine <arteme@gmail.com>"]
edition = "2018"

[dependencies]
once_cell = "1.4.0"
maplit = "1.0.2"

log = "*" # defined in pod-core
tokio = "*" # defined in pod-core
anyhow = "*" # defined in pod-code

pod-core = { path = "../core" }
pod-gtk = { path = "../gtk" }
