[package]
name = "pod-mod-pod2"
version = "0.0.0"
authors = ["Artem Egorkine <arteme@gmail.com>"]
edition = "2018"

[dependencies]
maplit = "1.0.2"

once_cell = "*" #defined in pod-core
log = "*" # defined in pod-core
tokio = "*" # defined in pod-core
anyhow = "*" # defined in pod-code

pod-core = { path = "../core" }
pod-gtk = { path = "../gtk" }
